Fix Button z-index

--- a/src/client/view/pages/DashboardView.scss
+++ b/src/client/view/pages/DashboardView.scss
@@ -20,7 +20,7 @@ a {
   height: 100%;
   position: relative;
   width: 33%;
-  z-index: 5;
+  z-index: 40;
 }
 
 // Handles open and closed states of menu
